	* revert NXDOMAIN change from 1.2.4
	* don't open any listen sockets if listen_interfaces is empty or misconfigured
	* fix bug in auto disk cache size logic
	* fix issue with outgoing_interfaces setting, where bind() would be called twice
	* add build option to disable share-mode
	* support validation of HTTPS trackers
	* deprecate strict super seeding mode
	* make UPnP port-mapping lease duration configurable
	* deprecate the bittyrant choking algorithm
	* add build option to disable streaming

1.2.5 release

	* announce port=1 instead of port=0, when there is no listen port
	* fix LSD over IPv6
	* support TCP_NOTSENT_LOWAT on Linux
	* fix correct interface binding of local service discovery multicast
	* fix issue with knowing which interfaces to announce to trackers and DHT
	* undeprecate settings_pack::dht_upload_rate_limit

1.2.4 release

	* fix binding TCP and UDP sockets to the same port, when specifying port 0
	* fix announce_to_all_trackers and announce_to_all_tiers behavior
	* fix suggest_read_cache setting
	* back-off tracker hostname looksups resulting in NXDOMAIN
	* lower SOCKS5 UDP keepalive timeout
	* fix external IP voting for multi-homed DHT nodes
	* deprecate broadcast_lsd setting. Just use multicast
	* deprecate upnp_ignore_nonrouters setting
	* don't attempt sending event=stopped if event=start never succeeded
	* make sure &key= stays consistent between different source IPs (as mandated by BEP7)
	* fix binding sockets to outgoing interface
	* add new socks5_alert to trouble shoot SOCKS5 proxies

1.2.3 release

	* fix erroneous event=completed tracker announce when checking files
	* promote errors in parsing listen_interfaces to post listen_failed_alert
	* fix bug in protocol encryption/obfuscation
	* fix buffer overflow in SOCKS5 UDP logic
	* fix issue of rapid calls to file_priority() clobbering each other
	* clear tracker errors on success
	* optimize setting with unlimited unchoke slots